add multi roles functionality