@@ -1,5 +1,28 @@
 package com.icthh.xm.uaa.web.rest;
 
+import static com.icthh.xm.commons.lep.XmLepConstants.THREAD_CONTEXT_KEY_TENANT_CONTEXT;
+import static com.icthh.xm.commons.lep.XmLepScriptConstants.BINDING_KEY_AUTH_CONTEXT;
+import static com.icthh.xm.uaa.UaaTestConstants.DEFAULT_TENANT_KEY_VALUE;
+import static com.icthh.xm.uaa.web.constant.ErrorConstants.ERROR_SUPER_ADMIN_FORBIDDEN_OPERATION;
+import static com.icthh.xm.uaa.web.constant.ErrorConstants.ERROR_USER_ACTIVATES_HIMSELF;
+import static com.icthh.xm.uaa.web.constant.ErrorConstants.ERROR_USER_BLOCK_HIMSELF;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.hamcrest.Matchers.hasItem;
+import static org.hamcrest.collection.IsCollectionWithSize.hasSize;
+import static org.junit.Assert.assertTrue;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.Mockito.doNothing;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.when;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.delete;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.put;
+import static org.springframework.test.web.servlet.result.MockMvcResultHandlers.print;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.content;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
+
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.dataformat.yaml.YAMLFactory;
 import com.icthh.xm.commons.i18n.error.web.ExceptionTranslator;
@@ -15,7 +38,6 @@ import com.icthh.xm.uaa.domain.User;
 import com.icthh.xm.uaa.domain.UserLogin;
 import com.icthh.xm.uaa.domain.UserLoginType;
 import com.icthh.xm.uaa.domain.properties.TenantProperties;
-import com.icthh.xm.uaa.repository.UserLoginRepository;
 import com.icthh.xm.uaa.repository.UserRepository;
 import com.icthh.xm.uaa.repository.kafka.ProfileEventProducer;
 import com.icthh.xm.uaa.service.TenantPropertiesService;
@@ -25,8 +47,16 @@ import com.icthh.xm.uaa.service.UserService;
 import com.icthh.xm.uaa.service.dto.UserDTO;
 import com.icthh.xm.uaa.service.mapper.UserMapper;
 import com.icthh.xm.uaa.service.query.UserQueryService;
-import com.icthh.xm.uaa.service.query.filter.UserFilterQuery;
 import com.icthh.xm.uaa.web.rest.vm.ManagedUserVM;
+import java.time.Instant;
+import java.util.Collections;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
+import java.util.UUID;
+import java.util.function.Consumer;
+import javax.persistence.EntityManager;
 import lombok.SneakyThrows;
 import org.apache.commons.lang3.RandomStringUtils;
 import org.junit.After;
@@ -50,37 +80,6 @@ import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.result.MockMvcResultMatchers;
 import org.springframework.test.web.servlet.setup.MockMvcBuilders;
 import org.springframework.transaction.annotation.Transactional;
-
-import javax.persistence.EntityManager;
-import java.time.Instant;
-import java.util.Collections;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.Optional;
-import java.util.UUID;
-
-import static com.icthh.xm.commons.lep.XmLepConstants.THREAD_CONTEXT_KEY_TENANT_CONTEXT;
-import static com.icthh.xm.commons.lep.XmLepScriptConstants.BINDING_KEY_AUTH_CONTEXT;
-import static com.icthh.xm.uaa.UaaTestConstants.DEFAULT_TENANT_KEY_VALUE;
-import static com.icthh.xm.uaa.web.constant.ErrorConstants.*;
-import static org.assertj.core.api.Assertions.assertThat;
-import static org.hamcrest.Matchers.hasItem;
-import static org.hamcrest.collection.IsCollectionWithSize.hasSize;
-import static org.junit.Assert.assertTrue;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.Mockito.doNothing;
-import static org.mockito.Mockito.mock;
-import static org.mockito.Mockito.when;
-import static org.springframework.http.converter.json.Jackson2ObjectMapperBuilder.json;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.delete;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.put;
-import static org.springframework.test.web.servlet.result.MockMvcResultHandlers.print;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.content;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
 /**
  * Test class for the UserResource REST controller.
@@ -188,14 +187,7 @@ public class UserResourceIntTest {
     public void setup() {
         MockitoAnnotations.initMocks(this);
         TenantContextUtils.setTenant(tenantContextHolder, DEFAULT_TENANT_KEY_VALUE);
-
-        TenantProperties properties = new TenantProperties();
-        TenantProperties.Security security = new TenantProperties.Security();
-        security.setDefaultUserRole(ROLE_USER);
-        properties.setSecurity(security);
-        tenantPropertiesService.onRefresh("/config/tenants/" + DEFAULT_TENANT_KEY_VALUE + "/uaa/uaa.yml",
-            new ObjectMapper(new YAMLFactory()).writeValueAsString(properties));
-
+        setTenantProps(tenantProperties -> {});
         doNothing().when(profileEventProducer).send(any());
         UserResource userResource = new UserResource(userLoginService,
             mailService,
@@ -275,7 +267,7 @@ public class UserResourceIntTest {
             ROLE_USER, "test", null, null, null, null, Collections.singletonList(userLogin),
             AUTO_LOGOUT_ENABLED,
             AUTO_LOGOUT_TIME,
-            null);
+            null, List.of("test"));
 
         restUserMockMvc.perform(post("/api/users")
             .contentType(TestUtil.APPLICATION_JSON_UTF8)
@@ -317,7 +309,10 @@ public class UserResourceIntTest {
             null,
             null,
             null,
-            ROLE_USER, "test", null, null, null, null, Collections.singletonList(userLogin), false, null, null);
+            ROLE_USER, "test", null, null,
+            null, null, Collections.singletonList(userLogin),
+            false,
+            null, null, List.of("test"));
 
         // An entity with an existing ID cannot be created, so this API call must fail
         restUserMockMvc.perform(post("/api/users")
@@ -356,7 +351,8 @@ public class UserResourceIntTest {
             null,
             null,
             null,
-            "test", RoleConstant.SUPER_ADMIN, null, null, null, null, Collections.singletonList(userLogin), false, null, null);
+            "test", RoleConstant.SUPER_ADMIN, null, null, null, null,
+            Collections.singletonList(userLogin), false, null, null, List.of(RoleConstant.SUPER_ADMIN));
 
 
         // SUPER-ADMIN entity cannot be created, so this API call must fail
@@ -396,7 +392,8 @@ public class UserResourceIntTest {
             null,
             null,
             null,
-            ROLE_USER, "test", null, null, null, null, Collections.singletonList(userLogin), false, null, null);
+            ROLE_USER, "test", null, null, null, null,
+            Collections.singletonList(userLogin), false, null, null, List.of("test"));
 
         // Create the User
         restUserMockMvc.perform(post("/api/users")
@@ -460,7 +457,7 @@ public class UserResourceIntTest {
         userHomer.setFirstName(firstName);
         userHomer.setLastName(lastName);
         userHomer.getLogins().get(0).setLogin(login);
-        userHomer.getLogins().add(new UserLogin(){{
+        userHomer.getLogins().add(new UserLogin() {{
             setLogin("donutEater");
             setTypeKey(UserLoginType.EMAIL.getValue());
             setUser(userHomer);
@@ -504,23 +501,23 @@ public class UserResourceIntTest {
         getUsersByLoginContainsMatcher("St");
 
         restUserMockMvc.perform(get("/api/users/logins-contains?login=wrong-login"))
-              .andDo(print())
-              .andExpect(status().isOk())
-              .andExpect(content().contentType(MediaType.APPLICATION_JSON_UTF8_VALUE))
-              .andExpect(content().json("[]"));
+            .andDo(print())
+            .andExpect(status().isOk())
+            .andExpect(content().contentType(MediaType.APPLICATION_JSON_UTF8_VALUE))
+            .andExpect(content().json("[]"));
     }
 
     private void getUsersByLoginContainsMatcher(String login) throws Exception {
         restUserMockMvc.perform(get("/api/users/logins-contains?login={login}", login))
-              .andDo(print())
-              .andExpect(status().isOk())
-              .andExpect(content().contentType(MediaType.APPLICATION_JSON_UTF8_VALUE))
-              .andExpect(jsonPath("$[0].userKey").value(user.getUserKey()))
-              .andExpect(jsonPath("$[0].firstName").value(DEFAULT_FIRSTNAME))
-              .andExpect(jsonPath("$[0].lastName").value(DEFAULT_LASTNAME))
-              .andExpect(jsonPath("$[0].imageUrl").value(DEFAULT_IMAGEURL))
-              .andExpect(jsonPath("$[0].langKey").value(DEFAULT_LANGKEY))
-              .andExpect(jsonPath("$[0].logins[0].login").value("test"));
+            .andDo(print())
+            .andExpect(status().isOk())
+            .andExpect(content().contentType(MediaType.APPLICATION_JSON_UTF8_VALUE))
+            .andExpect(jsonPath("$[0].userKey").value(user.getUserKey()))
+            .andExpect(jsonPath("$[0].firstName").value(DEFAULT_FIRSTNAME))
+            .andExpect(jsonPath("$[0].lastName").value(DEFAULT_LASTNAME))
+            .andExpect(jsonPath("$[0].imageUrl").value(DEFAULT_IMAGEURL))
+            .andExpect(jsonPath("$[0].langKey").value(DEFAULT_LANGKEY))
+            .andExpect(jsonPath("$[0].logins[0].login").value("test"));
     }
 
     @Test
@@ -582,7 +579,7 @@ public class UserResourceIntTest {
             ROLE_USER + "XXX", null, null, null, null, Collections.singletonList(userLogin),
             AUTO_LOGOUT_ENABLED,
             AUTO_LOGOUT_TIME,
-            null);
+            null, List.of(ROLE_USER + "XXX"));
 
         restUserMockMvc.perform(put("/api/users")
             .contentType(TestUtil.APPLICATION_JSON_UTF8)
@@ -602,7 +599,7 @@ public class UserResourceIntTest {
         //ASSERT THAT STATE IS CHANGED
         assertThat(testUser.isActivated()).isEqualTo(managedUserVM.isActivated());
         //ASSERT THAT ROLE IS CHANGED
-        assertThat(testUser.getRoleKey()).isEqualTo(managedUserVM.getRoleKey());
+        assertThat(testUser.getAuthorities()).isEqualTo(managedUserVM.getAuthorities());
     }
 
     @Test
@@ -635,7 +632,8 @@ public class UserResourceIntTest {
             updatedUser.getCreatedDate(),
             updatedUser.getLastModifiedBy(),
             updatedUser.getLastModifiedDate(),
-            ROLE_USER, "test", null, null, null, null, Collections.singletonList(userLoginNew), false, null, null);
+            ROLE_USER, "test", null, null, null, null,
+            Collections.singletonList(userLoginNew), false, null, null, List.of("test"));
 
         restUserMockMvc.perform(put("/api/users")
             .contentType(TestUtil.APPLICATION_JSON_UTF8)
@@ -700,7 +698,8 @@ public class UserResourceIntTest {
             updatedUser.getCreatedDate(),
             updatedUser.getLastModifiedBy(),
             updatedUser.getLastModifiedDate(),
-            ROLE_USER, "testNew", null, null, null, null, Collections.singletonList(userLoginNew), false, null, null);
+            ROLE_USER, "testNew", null, null, null, null,
+            Collections.singletonList(userLoginNew), false, null, null, List.of("testNew"));
 
         restUserMockMvc.perform(put("/api/users/logins")
             .contentType(TestUtil.APPLICATION_JSON_UTF8)
@@ -729,8 +728,9 @@ public class UserResourceIntTest {
             null,
             null,
             null,
-            "test", RoleConstant.SUPER_ADMIN, null, null, null, null, Collections.singletonList(userLogin), false, null,
-            null);
+            "test", RoleConstant.SUPER_ADMIN, null, null, null,
+            null, Collections.singletonList(userLogin), false, null,
+            null, List.of(RoleConstant.SUPER_ADMIN));
 
         restUserMockMvc.perform(put("/api/users")
             .contentType(TestUtil.APPLICATION_JSON_UTF8)
@@ -770,7 +770,7 @@ public class UserResourceIntTest {
             updatedUser.getLastModifiedBy(),
             updatedUser.getLastModifiedDate(),
             updatedUser.getUserKey(), RoleConstant.SUPER_ADMIN, null, null, null, null, Collections.singletonList(userLoginNew), false, null,
-            null);
+            null, List.of(RoleConstant.SUPER_ADMIN));
 
         restUserMockMvc.perform(put("/api/users/logins")
             .contentType(TestUtil.APPLICATION_JSON_UTF8)
@@ -968,7 +968,9 @@ public class UserResourceIntTest {
             null,
             DEFAULT_LOGIN,
             null,
-            "test", "testRoleKey", null, null, null, null, null, null, false, null,
+            "test", "testRoleKey", List.of("testRoleKey"),
+            null, null, null, null,
+            null, null, false, null,
             null);
         User user = userMapper.userDTOToUser(userDTO);
         assertThat(user.getId()).isEqualTo(DEFAULT_ID);
@@ -981,7 +983,7 @@ public class UserResourceIntTest {
         assertThat(user.getCreatedDate()).isNotNull();
         assertThat(user.getLastModifiedBy()).isNull();
         assertThat(user.getLastModifiedDate()).isNotNull();
-        assertThat(user.getRoleKey()).isEqualTo("testRoleKey");
+        assertThat(user.getAuthorities()).isEqualTo(List.of("testRoleKey"));
     }
 
     @Test
@@ -1005,8 +1007,58 @@ public class UserResourceIntTest {
         assertThat(userDTO.getCreatedDate()).isEqualTo(user.getCreatedDate());
         assertThat(userDTO.getLastModifiedBy()).isEqualTo(DEFAULT_LOGIN);
         assertThat(userDTO.getLastModifiedDate()).isEqualTo(user.getLastModifiedDate());
-        assertThat(userDTO.getRoleKey()).isEqualTo(ROLE_USER);
+        assertThat(userDTO.getAuthorities()).isEqualTo(List.of(ROLE_USER));
         assertThat(userDTO.toString()).isNotNull();
+    }
+
+    @Test
+    @Transactional
+    public void createUserWithMultipleRoles() throws Exception {
+
+        setTenantProps(tenantProperties -> tenantProperties.setMultiRoleEnabled(true));
+        int databaseSizeBeforeCreate = userRepository.findAll().size();
+
+        // Create the User
+        UserLogin userLogin = new UserLogin();
+        userLogin.setLogin("test");
+        userLogin.setTypeKey(UserLoginType.EMAIL.getValue());
+        ManagedUserVM managedUserVM = new ManagedUserVM(
+            null,
+            DEFAULT_PASSWORD,
+            DEFAULT_FIRSTNAME,
+            DEFAULT_LASTNAME,
+            true,
+            false,
+            null,
+            null,
+            DEFAULT_IMAGEURL,
+            DEFAULT_LANGKEY,
+            null,
+            null,
+            null,
+            null,
+            ROLE_USER, "test", null, null,
+            null, null, Collections.singletonList(userLogin),
+            AUTO_LOGOUT_ENABLED,
+            AUTO_LOGOUT_TIME,
+            null, List.of("test", "ROLE_ADMIN"));
+
+        restUserMockMvc.perform(post("/api/users")
+            .contentType(TestUtil.APPLICATION_JSON_UTF8)
+            .content(TestUtil.convertObjectToJsonBytes(managedUserVM)))
+            .andExpect(status().isCreated());
+
+        // Validate the User in the database
+        List<User> userList = userRepository.findAll();
+        assertThat(userList).hasSize(databaseSizeBeforeCreate + 1);
+        User testUser = userList.get(userList.size() - 1);
+        assertThat(testUser.getFirstName()).isEqualTo(DEFAULT_FIRSTNAME);
+        assertThat(testUser.getLastName()).isEqualTo(DEFAULT_LASTNAME);
+        assertThat(testUser.getImageUrl()).isEqualTo(DEFAULT_IMAGEURL);
+        assertThat(testUser.getLangKey()).isEqualTo(DEFAULT_LANGKEY);
+        assertThat(testUser.isAutoLogoutEnabled()).isEqualTo(AUTO_LOGOUT_ENABLED);
+        assertThat(testUser.getAutoLogoutTimeoutSeconds()).isEqualTo(AUTO_LOGOUT_TIME);
+        assertThat(testUser.getAuthorities()).contains("test", "ROLE_ADMIN");
     }
 
     private void initSecurityContextWithUserKey(String userKey) {
@@ -1018,5 +1070,16 @@ public class UserResourceIntTest {
         OAuth2Authentication authentication = mock(OAuth2Authentication.class);
         when(authentication.getDetails()).thenReturn(details);
         SecurityContextHolder.getContext().setAuthentication(authentication);
+    }
+
+    @SneakyThrows
+    private void setTenantProps(Consumer<TenantProperties> consumer){
+        TenantProperties properties = new TenantProperties();
+        TenantProperties.Security security = new TenantProperties.Security();
+        security.setDefaultUserRole(ROLE_USER);
+        properties.setSecurity(security);
+        consumer.accept(properties);
+        tenantPropertiesService.onRefresh("/config/tenants/" + DEFAULT_TENANT_KEY_VALUE + "/uaa/uaa.yml",
+            new ObjectMapper(new YAMLFactory()).writeValueAsString(properties));
     }
 }
